fix(core): remove text-decoration from footer icons
Remove text-decoration when footer links
containing icons are hovered to prevent
whitespace between links/icons to get
underlined (like text links are by default).

--- a/apis_core/core/static/css/core.css
+++ b/apis_core/core/static/css/core.css
@@ -11,3 +11,8 @@ footer a:has(> img),
 footer a:has(> span[class*="material-symbols"]) {
     display: inline-block;
 }
+
+footer a:has(> img):hover,
+footer a:has(> span[class*="material-symbols"]):hover {
+    text-decoration: none;
+}
